tests/spec/compile-fail/055_iterator_for_requires_move_source.zn
// category: compile-fail
// profile: freestanding
// purpose: named non-Copy Iterator sources must be explicitly moved into consuming for iteration

module tests.fail.iteratorForRequiresMoveSource;

import core.option.{Option, None};

struct Counter {
    current: U32,
    end: U32,
}

impl Counter {
    destroy {}
}

impl Iterator<U32> for Counter {
    fn next(mut self) -> Option<U32> {
        return None;
    }
}

fn bad() -> U32 {
    let counter = Counter { current: 0, end: 1 };
    var total: U32 = 0;
    for move value in counter {
        total = total + value; // expected-error: consuming iterator source requires `move counter`
    }
    return total;
}
